2009-01-05  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	* docs/libs/Makefile.am:
	* docs/libs/gst-plugins-base-libs-docs.sgml:
	* docs/libs/gst-plugins-base-libs-sections.txt:
	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-base-plugins-docs.sgml:
	* docs/plugins/gst-plugins-base-plugins-sections.txt:
	* docs/plugins/gst-plugins-base-plugins.args:
	* docs/plugins/gst-plugins-base-plugins.hierarchy:
	* docs/plugins/gst-plugins-base-plugins.interfaces:
	* docs/plugins/gst-plugins-base-plugins.prerequisites:
	* docs/plugins/gst-plugins-base-plugins.signals:
	* docs/plugins/inspect/plugin-app.xml:
	* gst-libs/gst/Makefile.am:
	* gst-libs/gst/app/gstappsink.c:
	* gst-libs/gst/app/gstappsrc.c:
	* tests/examples/Makefile.am:
	* tests/examples/app/Makefile.am:

	Move AppSrc/AppSink from gst-plugins-bad. Fixes #564421

2009-01-05  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_change_state):
	Avoid holding the OBJECT_LOCK when calling ringbuffer functions that
	take the ringbuffer lock because rinbuffer lock > OBJECT_LOCK. We can do
	this because the async_play method is deprecated and usually not called 
	anymore.

2009-01-05  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gstplaybin2.c: (notify_source_cb), (activate_group):
	Disconnect signal handlers before destroying a previous decodebin so
	that we don't end up causing deadlocks. Fixes #566586.

2009-01-05  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/audiotestsrc/gstaudiotestsrc.c:
	(gst_audio_test_src_class_init), (gst_audio_test_src_init),
	(gst_audio_test_src_check_get_range),
	(gst_audio_test_src_set_property),
	(gst_audio_test_src_get_property):
	* gst/audiotestsrc/gstaudiotestsrc.h:
	Add property to control pull/push based scheduling.

2009-01-02  Alessandro Decina  <alessandro.d@gmail.com>

	* configure.ac:
	* tests/examples/seek/Makefile.am:
	* tests/icles/Makefile.am: