@@ -1,3 +1,10 @@
+2009-01-06  Jan Schmidt  <jan.schmidt@sun.com>
+
+	* gst-libs/gst/video/Makefile.am:
+	* gst-libs/gst/video/video.h:
+	Fix up build flags and include statement for the new generated
+	enumtypes files, to fix dist.
+
 2009-01-05  Jan Schmidt  <jan.schmidt@sun.com>
 
 	* configure.ac:
